Refactoring: all code from Example-YandexPracticum for Catsgram